# streaming-rs

./: .gitignore  Cargo.toml  README.md  asd.txt  library.db  library.db-shm  library.db-wal
.github/workflows/: rust.yml
Playlist/: make  save-current
gui/: package-lock.json  package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
gui/src/components/: Queue.astro  SearchBar.astro  Sidebar.astro  Track.astro  player.astro
gui/src/pages/: index.astro  search.astro
gui/src/scripts/: search.ts  track.ts
src/: client.rs  database.rs  lib.rs  main.rs  playlist.rs  song.rs  tui.rs
src/tui/: app.rs  render.rs  stateful_list.rs  tui.rs
tui/: Cargo.toml  library.db
