[package]
name = "streaming"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mp3-metadata = "0.3.4"
rodio = "0.17.1"

# [lib]
# name = "streaming"
# path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
feature = ["minimp3"]
