[package]
name = "streaming"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcode = { version = "0.4.0", features = [ "serde" ] }
rodio = { git = "https://github.com/RustAudio/rodio.git" }
rspotify = { version = "0.11.7", features = ["env-file", "client-ureq", "ureq-rustls-tls"], default-features = false }
serde = "1.0.188"
smol = "1.3.0"
sqlx = { version = "0.7.1", features = [ "runtime-async-std", "tls-rustls", "sqlite" ] }

[lib]
name = "streaming"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
