[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streaming = { path = "../"}
tokio = { version = "1.32.0", features = ["full"] }
ratatui = { version = "0.23.0", features = ["all-widgets"] }
rodio = { git = "https://github.com/RustAudio/rodio.git" }
crossterm = "0.27.0"
